# yaml-form-engine

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/plans/: curried-snuggling-castle.md
data/: sample-criteria.yaml
docs/: security.md
forms/: arch-review.yaml  dpia-assessment.yaml  vendor-scorecard.yaml
forms/mcp/: confluence-create-page.yaml  confluence-search.yaml  diagram-generate.yaml  jira-create-issue.yaml  jira-search.yaml  notion-create-page.yaml  notion-search.yaml  youtube-transcript.yaml
tests/: test_cli_submit.py  test_expressions.py  test_form_generator.py  test_mcp_introspect.py  test_mcp_invoker.py  test_schema.py  test_type_mapper.py
tests/e2e/: conftest.py  test_field_types.py  test_form_state.py  test_mcp_form_e2e.py  test_step_navigation.py  test_submit_command.py
tests/e2e/page_objects/: form_page.py
yaml_form_engine/: __init__.py  __main__.py  _app.py  cli.py  data_resolver.py  engine.py  exporters.py  expressions.py  fields.py  form_generator.py  mcp_introspect.py  mcp_invoker.py  schema.py  type_mapper.py
